issp-bes-service/src/main/java/com/core/common/ppcl/FunctionParser.java
package com.core.common.ppcl;

import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class FunctionParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACT", "ACTION", "ASSIGN", "BLOCK", 
		"CALL", "CALLV", "COMMENT", "EXPR", "FUNCTION", "ID", "IF", "LINE_COMMENT", 
		"NEGATE", "NEWLINE", "NOP", "NOT", "NUM", "NUMBER", "PARAM", "PARAMATERS", 
		"RETURN", "STMTS", "UNLESS", "VAR", "VOIDNULL", "WHILE", "WS", "'!'", 
		"'!='", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", 
		"'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'DO'", "'ELSE'", "'for'", 
		"'{'", "'||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int ACT=4;
	public static final int ACTION=5;
	public static final int ASSIGN=6;
	public static final int BLOCK=7;
	public static final int CALL=8;
	public static final int CALLV=9;
	public static final int COMMENT=10;
	public static final int EXPR=11;
	public static final int FUNCTION=12;
	public static final int ID=13;
	public static final int IF=14;
	public static final int LINE_COMMENT=15;
	public static final int NEGATE=16;
	public static final int NEWLINE=17;
	public static final int NOP=18;
	public static final int NOT=19;
	public static final int NUM=20;
	public static final int NUMBER=21;
	public static final int PARAM=22;
	public static final int PARAMATERS=23;
	public static final int RETURN=24;
	public static final int STMTS=25;
	public static final int UNLESS=26;
	public static final int VAR=27;
	public static final int VOIDNULL=28;
	public static final int WHILE=29;
	public static final int WS=30;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public FunctionParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public FunctionParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return FunctionParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Function.g"; }


	public static class prog_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// Function.g:13:1: prog : ( funDecl )+ ;
	public final FunctionParser.prog_return prog() throws RecognitionException {
		FunctionParser.prog_return retval = new FunctionParser.prog_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope funDecl1 =null;


		try {
			// Function.g:13:5: ( ( funDecl )+ )
			// Function.g:13:7: ( funDecl )+
			{
			root_0 = (CommonTree)adaptor.nil();


			// Function.g:13:7: ( funDecl )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// Function.g:13:7: funDecl
					{
					pushFollow(FOLLOW_funDecl_in_prog82);
					funDecl1=funDecl();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, funDecl1.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "prog"


	public static class funDecl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "funDecl"
	// Function.g:16:1: funDecl : name= ID '(' paramDeclList ')' act= block -> ^( FUNCTION $name ( ^( PARAMATERS paramDeclList ) )? $act) ;
	public final FunctionParser.funDecl_return funDecl() throws RecognitionException {
		FunctionParser.funDecl_return retval = new FunctionParser.funDecl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token name=null;
		Token char_literal2=null;
		Token char_literal4=null;
		ParserRuleReturnScope act =null;
		ParserRuleReturnScope paramDeclList3 =null;

		CommonTree name_tree=null;
		CommonTree char_literal2_tree=null;
		CommonTree char_literal4_tree=null;
		RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
		RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_paramDeclList=new RewriteRuleSubtreeStream(adaptor,"rule paramDeclList");
		RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");

		try {
			// Function.g:17:2: (name= ID '(' paramDeclList ')' act= block -> ^( FUNCTION $name ( ^( PARAMATERS paramDeclList ) )? $act) )
			// Function.g:17:4: name= ID '(' paramDeclList ')' act= block
			{
			name=(Token)match(input,ID,FOLLOW_ID_in_funDecl97); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_ID.add(name);

			char_literal2=(Token)match(input,34,FOLLOW_34_in_funDecl99); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_34.add(char_literal2);

			pushFollow(FOLLOW_paramDeclList_in_funDecl101);
			paramDeclList3=paramDeclList();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_paramDeclList.add(paramDeclList3.getTree());
			char_literal4=(Token)match(input,35,FOLLOW_35_in_funDecl103); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_35.add(char_literal4);

			pushFollow(FOLLOW_block_in_funDecl107);
			act=block();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_block.add(act.getTree());
			// AST REWRITE
			// elements: name, act, paramDeclList
			// token labels: name
			// rule labels: act, retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleTokenStream stream_name=new RewriteRuleTokenStream(adaptor,"token name",name);
			RewriteRuleSubtreeStream stream_act=new RewriteRuleSubtreeStream(adaptor,"rule act",act!=null?act.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 17:44: -> ^( FUNCTION $name ( ^( PARAMATERS paramDeclList ) )? $act)
			{
				// Function.g:17:47: ^( FUNCTION $name ( ^( PARAMATERS paramDeclList ) )? $act)
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FUNCTION, "FUNCTION"), root_1);
				adaptor.addChild(root_1, stream_name.nextNode());
				// Function.g:17:64: ( ^( PARAMATERS paramDeclList ) )?
				if ( stream_paramDeclList.hasNext() ) {
					// Function.g:17:64: ^( PARAMATERS paramDeclList )
					{
					CommonTree root_2 = (CommonTree)adaptor.nil();
					root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PARAMATERS, "PARAMATERS"), root_2);
					adaptor.addChild(root_2, stream_paramDeclList.nextTree());
					adaptor.addChild(root_1, root_2);
					}

				}
				stream_paramDeclList.reset();

				adaptor.addChild(root_1, stream_act.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "funDecl"


	public static class paramDeclList_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "paramDeclList"
	// Function.g:20:1: paramDeclList : ( paramDecl ( ',' paramDecl )* )? -> ( paramDecl )* ;
	public final FunctionParser.paramDeclList_return paramDeclList() throws RecognitionException {
		FunctionParser.paramDeclList_return retval = new FunctionParser.paramDeclList_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal6=null;
		ParserRuleReturnScope paramDecl5 =null;
		ParserRuleReturnScope paramDecl7 =null;

		CommonTree char_literal6_tree=null;
		RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
		RewriteRuleSubtreeStream stream_paramDecl=new RewriteRuleSubtreeStream(adaptor,"rule paramDecl");

		try {
			// Function.g:21:2: ( ( paramDecl ( ',' paramDecl )* )? -> ( paramDecl )* )
			// Function.g:21:4: ( paramDecl ( ',' paramDecl )* )?
			{
			// Function.g:21:4: ( paramDecl ( ',' paramDecl )* )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==ID) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// Function.g:21:5: paramDecl ( ',' paramDecl )*
					{
					pushFollow(FOLLOW_paramDecl_in_paramDeclList137);
					paramDecl5=paramDecl();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_paramDecl.add(paramDecl5.getTree());
					// Function.g:21:15: ( ',' paramDecl )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==38) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// Function.g:21:16: ',' paramDecl
							{
							char_literal6=(Token)match(input,38,FOLLOW_38_in_paramDeclList140); if (state.failed) return retval; 
							if ( state.backtracking==0 ) stream_38.add(char_literal6);

							pushFollow(FOLLOW_paramDecl_in_paramDeclList142);
							paramDecl7=paramDecl();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) stream_paramDecl.add(paramDecl7.getTree());
							}
							break;

						default :
							break loop2;
						}
					}

					}
					break;

			}

			// AST REWRITE
			// elements: paramDecl
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 21:34: -> ( paramDecl )*
			{
				// Function.g:21:37: ( paramDecl )*
				while ( stream_paramDecl.hasNext() ) {
					adaptor.addChild(root_0, stream_paramDecl.nextTree());
				}
				stream_paramDecl.reset();

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "paramDeclList"


	public static class paramDecl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "paramDecl"
	// Function.g:24:1: paramDecl : ID -> ^( PARAM ID ) ;
	public final FunctionParser.paramDecl_return paramDecl() throws RecognitionException {
		FunctionParser.paramDecl_return retval = new FunctionParser.paramDecl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ID8=null;

		CommonTree ID8_tree=null;
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

		try {
			// Function.g:25:2: ( ID -> ^( PARAM ID ) )
			// Function.g:25:4: ID
			{
			ID8=(Token)match(input,ID,FOLLOW_ID_in_paramDecl161); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_ID.add(ID8);

			// AST REWRITE
			// elements: ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 25:7: -> ^( PARAM ID )
			{
				// Function.g:25:10: ^( PARAM ID )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PARAM, "PARAM"), root_1);
				adaptor.addChild(root_1, stream_ID.nextNode());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "paramDecl"


	public static class block_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "block"
	// Function.g:28:1: block : '{' stmts= stmtList '}' -> ^( BLOCK ^( STMTS $stmts) ) ;
	public final FunctionParser.block_return block() throws RecognitionException {
		FunctionParser.block_return retval = new FunctionParser.block_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal9=null;
		Token char_literal10=null;
		ParserRuleReturnScope stmts =null;

		CommonTree char_literal9_tree=null;
		CommonTree char_literal10_tree=null;
		RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
		RewriteRuleTokenStream stream_53=new RewriteRuleTokenStream(adaptor,"token 53");
		RewriteRuleSubtreeStream stream_stmtList=new RewriteRuleSubtreeStream(adaptor,"rule stmtList");

		try {
			// Function.g:29:2: ( '{' stmts= stmtList '}' -> ^( BLOCK ^( STMTS $stmts) ) )
			// Function.g:29:4: '{' stmts= stmtList '}'
			{
			char_literal9=(Token)match(input,51,FOLLOW_51_in_block181); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_51.add(char_literal9);

			pushFollow(FOLLOW_stmtList_in_block185);
			stmts=stmtList();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_stmtList.add(stmts.getTree());
			char_literal10=(Token)match(input,53,FOLLOW_53_in_block187); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_53.add(char_literal10);

			// AST REWRITE
			// elements: stmts
			// token labels: 
			// rule labels: stmts, retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_stmts=new RewriteRuleSubtreeStream(adaptor,"rule stmts",stmts!=null?stmts.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 29:27: -> ^( BLOCK ^( STMTS $stmts) )
			{
				// Function.g:29:30: ^( BLOCK ^( STMTS $stmts) )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BLOCK, "BLOCK"), root_1);
				// Function.g:29:38: ^( STMTS $stmts)
				{
				CommonTree root_2 = (CommonTree)adaptor.nil();
				root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STMTS, "STMTS"), root_2);
				adaptor.addChild(root_2, stream_stmts.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "block"


	public static class stmtList_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "stmtList"
	// Function.g:32:1: stmtList : ( stmt )* ;
	public final FunctionParser.stmtList_return stmtList() throws RecognitionException {
		FunctionParser.stmtList_return retval = new FunctionParser.stmtList_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope stmt11 =null;


		try {
			// Function.g:32:9: ( ( stmt )* )
			// Function.g:32:11: ( stmt )*
			{
			root_0 = (CommonTree)adaptor.nil();


			// Function.g:32:11: ( stmt )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==ACT||(LA4_0 >= ID && LA4_0 <= IF)||LA4_0==NUMBER||LA4_0==RETURN||LA4_0==UNLESS||LA4_0==WHILE||LA4_0==31||LA4_0==34||LA4_0==39||LA4_0==48||(LA4_0 >= 50 && LA4_0 <= 51)) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// Function.g:32:11: stmt
					{
					pushFollow(FOLLOW_stmt_in_stmtList208);
					stmt11=stmt();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, stmt11.getTree());

					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "stmtList"


	public static class stmt_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "stmt"
	// Function.g:35:1: stmt : ( RETURN expr ';' -> ^( RETURN expr ) | ACT ';' -> ^( ACTION ACT ) | ifStmt | ifelseStmt | WHILE '(' expr ')' stmt -> ^( WHILE expr stmt ) | 'DO' stmt WHILE '(' expr ')' ';' -> stmt ^( WHILE expr stmt ) | 'for' '(' ini= expr ';' tes= expr ';' inc= expr ')' stmt -> $ini ^( WHILE $tes ^( BLOCK ^( STMTS stmt $inc) ) ) | block | expr ';' -> expr );
	public final FunctionParser.stmt_return stmt() throws RecognitionException {
		FunctionParser.stmt_return retval = new FunctionParser.stmt_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token RETURN12=null;
		Token char_literal14=null;
		Token ACT15=null;
		Token char_literal16=null;
		Token WHILE19=null;
		Token char_literal20=null;
		Token char_literal22=null;
		Token string_literal24=null;
		Token WHILE26=null;
		Token char_literal27=null;
		Token char_literal29=null;
		Token char_literal30=null;
		Token string_literal31=null;
		Token char_literal32=null;
		Token char_literal33=null;
		Token char_literal34=null;
		Token char_literal35=null;
		Token char_literal39=null;
		ParserRuleReturnScope ini =null;
		ParserRuleReturnScope tes =null;
		ParserRuleReturnScope inc =null;
		ParserRuleReturnScope expr13 =null;
		ParserRuleReturnScope ifStmt17 =null;
		ParserRuleReturnScope ifelseStmt18 =null;
		ParserRuleReturnScope expr21 =null;
		ParserRuleReturnScope stmt23 =null;
		ParserRuleReturnScope stmt25 =null;
		ParserRuleReturnScope expr28 =null;
		ParserRuleReturnScope stmt36 =null;
		ParserRuleReturnScope block37 =null;
		ParserRuleReturnScope expr38 =null;

		CommonTree RETURN12_tree=null;
		CommonTree char_literal14_tree=null;
		CommonTree ACT15_tree=null;
		CommonTree char_literal16_tree=null;
		CommonTree WHILE19_tree=null;
		CommonTree char_literal20_tree=null;
		CommonTree char_literal22_tree=null;
		CommonTree string_literal24_tree=null;
		CommonTree WHILE26_tree=null;
		CommonTree char_literal27_tree=null;
		CommonTree char_literal29_tree=null;
		CommonTree char_literal30_tree=null;
		CommonTree string_literal31_tree=null;
		CommonTree char_literal32_tree=null;
		CommonTree char_literal33_tree=null;
		CommonTree char_literal34_tree=null;
		CommonTree char_literal35_tree=null;
		CommonTree char_literal39_tree=null;
		RewriteRuleTokenStream stream_RETURN=new RewriteRuleTokenStream(adaptor,"token RETURN");
		RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
		RewriteRuleTokenStream stream_ACT=new RewriteRuleTokenStream(adaptor,"token ACT");
		RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
		RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
		RewriteRuleTokenStream stream_WHILE=new RewriteRuleTokenStream(adaptor,"token WHILE");
		RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
		RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		RewriteRuleSubtreeStream stream_stmt=new RewriteRuleSubtreeStream(adaptor,"rule stmt");

		try {
			// Function.g:36:5: ( RETURN expr ';' -> ^( RETURN expr ) | ACT ';' -> ^( ACTION ACT ) | ifStmt | ifelseStmt | WHILE '(' expr ')' stmt -> ^( WHILE expr stmt ) | 'DO' stmt WHILE '(' expr ')' ';' -> stmt ^( WHILE expr stmt ) | 'for' '(' ini= expr ';' tes= expr ';' inc= expr ')' stmt -> $ini ^( WHILE $tes ^( BLOCK ^( STMTS stmt $inc) ) ) | block | expr ';' -> expr )
			int alt5=9;
			switch ( input.LA(1) ) {
			case RETURN:
				{
				alt5=1;
				}
				break;
			case ACT:
				{
				alt5=2;
				}
				break;
			case UNLESS:
				{
				alt5=3;
				}
				break;
			case IF:
				{
				alt5=4;
				}
				break;
			case WHILE:
				{
				alt5=5;
				}
				break;
			case 48:
				{
				alt5=6;
				}
				break;
			case 50:
				{
				alt5=7;
				}
				break;
			case 51:
				{
				alt5=8;
				}
				break;
			case ID:
			case NUMBER:
			case 31:
			case 34:
			case 39:
				{
				alt5=9;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// Function.g:37:4: RETURN expr ';'
					{
					RETURN12=(Token)match(input,RETURN,FOLLOW_RETURN_in_stmt227); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_RETURN.add(RETURN12);

					pushFollow(FOLLOW_expr_in_stmt229);
					expr13=expr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_expr.add(expr13.getTree());
					char_literal14=(Token)match(input,41,FOLLOW_41_in_stmt231); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_41.add(char_literal14);

					// AST REWRITE
					// elements: RETURN, expr
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 37:20: -> ^( RETURN expr )
					{
						// Function.g:37:23: ^( RETURN expr )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot(stream_RETURN.nextNode(), root_1);
						adaptor.addChild(root_1, stream_expr.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// Function.g:38:4: ACT ';'
					{
					ACT15=(Token)match(input,ACT,FOLLOW_ACT_in_stmt244); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_ACT.add(ACT15);

					char_literal16=(Token)match(input,41,FOLLOW_41_in_stmt246); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_41.add(char_literal16);

					// AST REWRITE
					// elements: ACT
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 38:12: -> ^( ACTION ACT )
					{
						// Function.g:38:15: ^( ACTION ACT )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ACTION, "ACTION"), root_1);
						adaptor.addChild(root_1, stream_ACT.nextNode());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 3 :
					// Function.g:39:4: ifStmt
					{
